Stats: fix z-index of search dropdown

--- a/src/public/less/pages/statistics.less
+++ b/src/public/less/pages/statistics.less
@@ -467,6 +467,7 @@
 					border-radius: 6px;
 					margin-top: 2px;
 					padding: 8px;
+					z-index: 101;
 				}
 
 				[class*="aa-dataset"] {
@@ -671,6 +672,7 @@
 		}
 
 		&.is-pinned {
+			z-index: 101;
 			height: auto;
 			background: #fff;
 			transition: all .2s;
